<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_qian"
        android:divider="@drawable/spacer_mediun"
        android:dividerPadding="@dimen/margin_1"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/startData" />


            <TextView
                android:id="@+id/tv_starttime"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_8"
                android:text="2017/2/23" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_16">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/endData" />


            <TextView
                android:id="@+id/tv_endtime"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_8"
                android:text="2017/2/23" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/datanumber" />


            <TextView
                android:id="@+id/tv_showData"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_8"
                android:text="256" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
